[tool.poetry]
name = "nntoolz"
version = "0.1.0"
description = "Building beatiful pytorch modules"
authors = ["Daniel Suess <suess.daniel@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"
isort = "^5.12.0"
black = "^23.7.0"
pytest = "^7.4.0"
numpy = "^1.25.2"


[tool.pytest.ini_options]
testpaths = ["nntoolz", "tests"]
addopts = ["--doctest-modules"]


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3


[tool.black]
line-length = 120
target-version = ['py310']
include = ".py"
exclude = ".pyc|.pyi|.so"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
